# code-nexus

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  ARCHITECTURE_DATAFLOW.mmd  ARCHITECTURE_DECISIONS.mmd  ARCHITECTURE_MODULES.mmd  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  mcp_server.sh  mix.exs  quickstart.sh  ui.md
.claude/: skills
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-cli.yml
bench/: dashboard_tick.exs
cli/: .gitignore  .goreleaser.yaml  Makefile  README.md  go.mod  main.go
cli/client/: client.go
cli/cmd/: callers.go  community.go  dead_code.go  impact.go  reindex.go  root.go  search.go  stats.go  status.go  update.go  wizard.go
cli/ui/: header.go  spinner.go  styles.go
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: ARCHITECTURE.mmd  ARCHITECTURE_DATAFLOW.mmd  ARCHITECTURE_DECISIONS.mmd  ARCHITECTURE_EMBEDDINGS.mmd  ARCHITECTURE_GRAPH.mmd  ARCHITECTURE_MODULES.mmd  ARCHITECTURE_SYSTEM.mmd  DOCKERHUB.md  ui.md
lib/: elixir_nexus.ex
lib/elixir_nexus/: application.ex  cache_owner.ex  chunk_cache.ex  chunker.ex  code_schema.ex  dirty_tracker.ex  embedding_model.ex  events.ex  file_watcher.ex  graph_cache.ex  ignore_filter.ex  indexer.ex  indexing_helpers.ex  indexing_pipeline.ex  (+13 more)
native/tree_sitter_nif/: Cargo.toml
native/tree_sitter_nif/src/: lib.rs
test/: test_helper.exs
(+164 files in other folders)
