[package]
name = "tree_sitter_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "tree_sitter_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-elixir = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
